finally fix success page not responsive and getting data

--- a/newsletter-signup/style.css
+++ b/newsletter-signup/style.css
@@ -152,10 +152,49 @@ section form fieldset legend {
   margin-bottom: 5px;
 }
 
-section form fieldset button {
+.btn-class {
   color: var(--clr-neutral-400);
   background-color: var(--clr-neutral-100);
   padding: var(--fs-100);
   border-radius: 5px;
   border: 0;
+}
+
+.success-page {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding-top: 100px;
+
+}
+
+.success-page * {
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+
+.success-page img {
+  width: 50px;
+}
+
+.success-page .btn-class {
+  position: absolute;
+  bottom: 40px;
+  left: 0px;
+  right: 20px;
+}
+
+.success-page h2 {
+  font-size: var(--fs-300);
+  color: var(--clr-neutral-100);
+}
+
+.success-page span {
+  margin: 0;
+  color: var(--clr-neutral-100);
+}
+
+.success-page p {
+  line-height: 20px;
 }
